data loader testing for environment added

--- a/master_copy.ipynb
+++ b/master_copy.ipynb
@@ -167,6 +167,36 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SHhhWnRLrgpH"
+      },
+      "source": [
+        "if 'google.colab' in str(get_ipython()):\r\n",
+        "  from google.colab import drive\r\n",
+        "  drive.mount('/content/drive')\r\n",
+        "  b_df = pd.read_parquet(\"/content/drive/MyDrive/My Drive/baskets.parquet\")\r\n",
+        "  c_df = pd.read_parquet(\"/content/drive/MyDrive/My Drive/coupons.parquet\")\r\n",
+        "  ci_df = pd.read_parquet(\"/content/drive/MyDrive/My Drive/coupon_index.parquet\")\r\n",
+        "else:\r\n",
+        "  file_path = \"./data/\"\r\n",
+        "\r\n",
+        "  baskets_pq = \"baskets.parquet\"\r\n",
+        "  coupons_pq = \"coupons.parquet\"\r\n",
+        "  coupon_index_pq = \"coupon_index.parquet\"\r\n",
+        "\r\n",
+        "  b_df = pd.read_parquet(file_path + baskets_pq)\r\n",
+        "  c_df = pd.read_parquet(file_path + coupons_pq)\r\n",
+        "  ci_df = pd.read_parquet(file_path + coupon_index_pq)\r\n",
+        "\r\n",
+        "  print(f\"baskets_df: {b_df.shape}\")\r\n",
+        "  print(f\"coupons_df: {c_df.shape}\")\r\n",
+        "  print(f\"coupon_index_df: {ci_df.shape}\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "wC9XWfczqoBz"
