--- a/master_copy.ipynb
+++ b/master_copy.ipynb
@@ -10,7 +10,7 @@
       ],
       "toc_visible": true,
       "mount_file_id": "17sCjKQDEfGjPbBnbNYH04SFCv7PnEm2L",
-      "authorship_tag": "ABX9TyNqlGppeIUoMxTcFA6RJUmH",
+      "authorship_tag": "ABX9TyM5OTzDSUjZaJ+cCvmkIWOM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,35 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/uhdang/mlim_group_3_final_assignment/blob/main/master_copy.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eaAU2FeoP4WB"
+      },
+      "source": [
+        "# ToDo"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "glmguT6pP19T"
+      },
+      "source": [
+        "- Exercise #7 - slide 5\r\n",
+        "- own-product moving window purchase frequencies\r\n",
+        "- own-category moving window purchase frequencies\r\n",
+        "- customer embedding (matrix-factorization)\r\n",
+        "- negative sampling instead of using all products for each shopper\r\n",
+        "- Crossvalidation\r\n",
+        "- PCA for product vectors included as feature and then remove product\r\n",
+        "- discount from same category\r\n",
+        "- price elasticity (own and cross product/category)\r\n",
+        "- promotion in substitute or complementary category\r\n",
+        "\r\n",
+        "Put code in functions or maybe classes"
       ]
     },
     {
