main.ipynb setup

--- a/project/main.ipynb
+++ b/project/main.ipynb
@@ -1,20 +1,38 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from db.Db import DataBase\n",
-    "from data_preprocessing.Category import Category\n",
-    "from datasets.Trainset import Trainset\n",
-    "import os"
+    "## Setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "from db.Db import DataBase\n",
+    "from data_preprocessing.Category import Category\n",
+    "from datasets.Trainset import Trainset\n",
+    "from feature_engineering.Feature import Feature\n",
+    "from datasets.Testset import Testset\n",
+    "from Trainer import Trainer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,8 +42,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -57,17 +82,17 @@
      "output_type": "stream",
      "text": [
       "   week shopper product  price  target category\n",
-      "0     0       0      71    629       1        0\n",
-      "1     0       0      91    605       1       14\n",
+      "0     0       0      71    629       1       21\n",
+      "1     0       0      91    605       1       24\n",
       "   week shopper product  price  target category\n",
-      "0    89       0      67    637       1       12\n",
-      "1    89       0      71    629       1        0\n",
+      "0    89       0      67    637       1       13\n",
+      "1    89       0      71    629       1       21\n",
       "   week shopper product  discount category\n",
-      "0     0       0      35        35       20\n",
-      "1     0       0     193        40       15\n",
+      "0     0       0      35        35       11\n",
+      "1     0       0     193        40        5\n",
       "   week shopper product  discount category\n",
-      "0    89       0     131        30        2\n",
-      "1    89       0      16        25       23\n"
+      "0    89       0     131        30        0\n",
+      "1    89       0      16        25       22\n"
      ]
     }
    ],
@@ -82,17 +107,298 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feature engineering begin\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define feat\n",
+    "print(\"feature engineering begin\")\n",
+    "feat = Feature(baskets_train, coupons_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_count_of_product = feat.total_count_of_product()\n",
+    "print(total_count_of_product.head(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reordered_product = feat.reordered_product()\n",
+    "print(reordered_product.head(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_count = feat.category_count()\n",
+    "print(category_count.head(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reordered_category = feat.reordered_category()\n",
+    "print(reordered_category.head(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coupon_in_same_category = feat.coupon_in_same_category()\n",
+    "print(coupon_in_same_category.head(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratio_of_reordered_products_per_shopper = feat.ratio_of_reordered_products_per_shopper()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratio_of_reordered_categories_per_shopper = feat.ratio_of_reordered_categories_per_shopper()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "average_price_per_shopper = feat.average_price_per_shopper()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "average_basket_size = feat.average_basket_size()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unique_products_per_shopper = feat.unique_products_per_shopper()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unique_categories_per_shopper = feat.unique_categories_per_shopper()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "feature engineering finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"feature engineering finished\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training Set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train Table\n",
-    "train_t = Trainset(baskets_train, coupons_train, original_price)\n",
-    "X_train, y_train = train_t.split_to_X_train_and_y_train(prods_cat_table)\n",
+    "train_t = Trainset(baskets_train, coupons_train, original_price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## full_df_train\n",
+    "full_df_train = train_t.generate_full_df_train()\n",
+    "print(\"----- full_df_train -----\")\n",
+    "print(full_df_train.head(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Generate training set\n",
+    "training_set = train_t.generate_training_set(\n",
+    "    prods_cat_table,\n",
+    "    original_price,\n",
+    "    total_count_of_product,\n",
+    "    reordered_product,\n",
+    "    category_count,\n",
+    "    reordered_category,\n",
+    "    coupon_in_same_category,\n",
+    "    ratio_of_reordered_products_per_shopper,\n",
+    "    ratio_of_reordered_categories_per_shopper,\n",
+    "    average_price_per_shopper,\n",
+    "    average_basket_size,\n",
+    "    unique_products_per_shopper,\n",
+    "    unique_categories_per_shopper,\n",
+    ")\n",
+    "print(\"===== training_set =====\")\n",
+    "print(training_set.head(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X_train, y_train\n",
+    "X_train, y_train = train_t.split_trainingset_to_X_train_and_y_train(training_set)\n",
     "print(X_train.head(2))\n",
     "print(y_train.head(2))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# testing table\n",
+    "test_t = Testset(baskets_test, coupons_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# full_df_test\n",
+    "full_df_test = test_t.generate_full_df_test()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate testing set\n",
+    "testing_set = test_t.generate_training_set(\n",
+    "    prods_cat_table,\n",
+    "    original_price,\n",
+    "    total_count_of_product,\n",
+    "    reordered_product,\n",
+    "    category_count,\n",
+    "    reordered_category,\n",
+    "    coupon_in_same_category,\n",
+    "    ratio_of_reordered_products_per_shopper,\n",
+    "    ratio_of_reordered_categories_per_shopper,\n",
+    "    average_price_per_shopper,\n",
+    "    average_basket_size,\n",
+    "    unique_products_per_shopper,\n",
+    "    unique_categories_per_shopper,\n",
+    "    training_set\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
