getting through dimension limit

--- a/project/main.ipynb
+++ b/project/main.ipynb
@@ -15,11 +15,12 @@
    "source": [
     "import os\n",
     "\n",
-    "from db.Db import DataBase\n",
-    "from data_preprocessing.Category import Category\n",
-    "from datasets.Trainset import Trainset\n",
-    "from feature_engineering.Feature import Feature\n",
-    "from datasets.Testset import Testset\n",
+    "from Db import DataBase\n",
+    "from Category import Category\n",
+    "from Feature import Feature\n",
+    "\n",
+    "from Trainset import Trainset\n",
+    "from Testset import Testset\n",
     "from Trainer import Trainer"
    ]
   },
@@ -81,18 +82,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(250, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(prods_cat_table.shape)\n",
+    "# prods_cat_table.tail(60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jungwoojamesjeong/opt/anaconda3/envs/hu-bads/lib/python3.8/site-packages/pandas/core/frame.py:3065: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self[k1] = value[k2]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "   week shopper product  price  target category\n",
-      "0     0       0      71    629       1       21\n",
-      "1     0       0      91    605       1       24\n",
-      "   week shopper product  price  target category\n",
-      "0    89       0      67    637       1       13\n",
-      "1    89       0      71    629       1       21\n",
+      "0     0       0      71    629       1        3\n",
+      "1     0       0      91    605       1        5\n",
+      "   week shopper  product  price  target category\n",
+      "0    89       0       67    637       1       21\n",
+      "1    89       0       71    629       1        3\n",
       "   week shopper product  discount category\n",
-      "0     0       0      35        35       11\n",
-      "1     0       0     193        40        5\n",
-      "   week shopper product  discount category\n",
-      "0    89       0     131        30        0\n",
-      "1    89       0      16        25       22\n"
+      "0     0       0      35        35        7\n",
+      "1     0       0     193        40       19\n",
+      "   week shopper  product  discount category\n",
+      "0    89       0      131        30       23\n",
+      "1    89       0       16        25       17\n"
      ]
     }
    ],
@@ -134,111 +165,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "total_count_of_product = feat.total_count_of_product()\n",
-    "print(total_count_of_product.head(2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reordered_product = feat.reordered_product()\n",
-    "print(reordered_product.head(2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "category_count = feat.category_count()\n",
-    "print(category_count.head(2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reordered_category = feat.reordered_category()\n",
-    "print(reordered_category.head(2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coupon_in_same_category = feat.coupon_in_same_category()\n",
-    "print(coupon_in_same_category.head(2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ratio_of_reordered_products_per_shopper = feat.ratio_of_reordered_products_per_shopper()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ratio_of_reordered_categories_per_shopper = feat.ratio_of_reordered_categories_per_shopper()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "average_price_per_shopper = feat.average_price_per_shopper()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "average_basket_size = feat.average_basket_size()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_products_per_shopper = feat.unique_products_per_shopper()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "unique_categories_per_shopper = feat.unique_categories_per_shopper()\n"
+    "total_count_of_product = feat.total_count_of_product()\n",
+    "reordered_category = (baskets_train.groupby(['shopper']).category.value_counts()>1).astype(int)\n",
+    "reordered_product = feat.reordered_product()\n",
+    "category_count = feat.category_count()\n",
+    "reordered_category = feat.reordered_category()\n",
+    "coupon_in_same_category = feat.coupon_in_same_category()\n",
+    "average_price_per_shopper = feat.average_price_per_shopper()\n",
+    "average_basket_size = feat.average_basket_size()\n",
+    "unique_products_per_shopper = feat.unique_products_per_shopper()\n",
+    "unique_categories_per_shopper = feat.unique_categories_per_shopper()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ratio_of_reordered_products_per_shopper = feat.ratio_of_reordered_products_per_shopper()\n",
+    "# ratio_of_reordered_categories_per_shopper = feat.ratio_of_reordered_categories_per_shopper()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,14 +234,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "maximum supported dimension for an ndarray is 32, found 250",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-1266fe3d6149>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m## featureless_training_set\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfeatureless_training_set\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_t\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgenerate_featureless_training_set\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprods_cat_table\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"----- featureless training set -----\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeatureless_training_set\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Project/hu/mlim_group_3_final_assignment/project/Trainset.py\u001b[0m in \u001b[0;36mgenerate_featureless_training_set\u001b[0;34m(self, prods_cat_table)\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[0mfull_df_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgenerate_full_df_train\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m         \u001b[0mdf1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'key'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnum_weeks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'week'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnum_weeks\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m         \u001b[0mdf2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'key'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnum_shoppers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'shopper'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnum_shoppers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m         \u001b[0mdf3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'key'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mones\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m250\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'product'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m250\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/hu-bads/lib/python3.8/site-packages/numpy/core/numeric.py\u001b[0m in \u001b[0;36mones\u001b[0;34m(shape, dtype, order)\u001b[0m\n\u001b[1;32m    190\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    191\u001b[0m     \"\"\"\n\u001b[0;32m--> 192\u001b[0;31m     \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mempty\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    193\u001b[0m     \u001b[0mmultiarray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopyto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcasting\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'unsafe'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    194\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: maximum supported dimension for an ndarray is 32, found 250"
+     ]
+    }
+   ],
    "source": [
-    "## full_df_train\n",
-    "full_df_train = train_t.generate_full_df_train()\n",
-    "print(\"----- full_df_train -----\")\n",
-    "print(full_df_train.head(2))"
+    "## featureless_training_set\n",
+    "featureless_training_set = train_t.generate_featureless_training_set(prods_cat_table)\n",
+    "print(\"----- featureless training set -----\")\n",
+    "print(featureless_training_set.head(2))"
    ]
   },
   {
@@ -296,20 +265,20 @@
    "outputs": [],
    "source": [
     "## Generate training set\n",
-    "training_set = train_t.generate_training_set(\n",
-    "    prods_cat_table,\n",
+    "training_set = train_t.populate_features(\n",
+    "    featureless_training_set,\n",
     "    original_price,\n",
     "    total_count_of_product,\n",
     "    reordered_product,\n",
     "    category_count,\n",
     "    reordered_category,\n",
     "    coupon_in_same_category,\n",
-    "    ratio_of_reordered_products_per_shopper,\n",
-    "    ratio_of_reordered_categories_per_shopper,\n",
     "    average_price_per_shopper,\n",
     "    average_basket_size,\n",
     "    unique_products_per_shopper,\n",
-    "    unique_categories_per_shopper,\n",
+    "    unique_categories_per_shopper\n",
+    "#     ratio_of_reordered_products_per_shopper,\n",
+    "#     ratio_of_reordered_categories_per_shopper,\n",
     ")\n",
     "print(\"===== training_set =====\")\n",
     "print(training_set.head(2))"
@@ -369,13 +338,13 @@
     "    category_count,\n",
     "    reordered_category,\n",
     "    coupon_in_same_category,\n",
-    "    ratio_of_reordered_products_per_shopper,\n",
-    "    ratio_of_reordered_categories_per_shopper,\n",
     "    average_price_per_shopper,\n",
     "    average_basket_size,\n",
     "    unique_products_per_shopper,\n",
     "    unique_categories_per_shopper,\n",
     "    training_set\n",
+    "#     ratio_of_reordered_products_per_shopper,\n",
+    "#     ratio_of_reordered_categories_per_shopper,\n",
     ")"
    ]
   },
@@ -384,21 +353,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_test, y_test = test_t.split_testingset_to_X_test_and_y_test(testing_set)\n",
+    "print(X_test.head(2))\n",
+    "print(y_test.head(2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trainer"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "trainer = Trainer(X_train, y_train, X_test, y_test)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = trainer.fit_model()"
+   ]
   },
   {
    "cell_type": "code",
@@ -424,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
