--- a/project/main.ipynb
+++ b/project/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,41 +54,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# baskets data\n",
-    "baskets_data = dbase.load_basket_data()\n",
-    "\n",
-    "# orignal_price\n",
-    "original_price = dbase.original_price(baskets_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Product Category Table\n",
-    "catClass = Category(baskets_data)\n",
-    "prods_cat_table = catClass.generate_product_category_table()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(250, 2)\n"
+     "ename": "TypeError",
+     "evalue": "original_price() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-3ea43b9e86e0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# orignal_price\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0moriginal_price\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdbase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moriginal_price\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbaskets_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Product Category Table\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: original_price() takes 1 positional argument but 2 were given"
      ]
     }
    ],
+   "source": [
+    "baskets_data, coupons_data = dbase.load_basket_coupon_data()\n",
+    "\n",
+    "# orignal_price\n",
+    "original_price = dbase.original_price(baskets_data)\n",
+    "\n",
+    "# Product Category Table\n",
+    "catClass = Category(baskets_data)\n",
+    "prods_cat_table = catClass.generate_product_category_table()\n",
+    "\n",
+    "baskets_train, baskets_test, coupons_train, coupons_test = dbase.split_data(baskets_data, coupons_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "baskets_train, baskets_test, coupons_train, coupons_test = dbase.generate_split_data_with_category(prods_cat_table, baskets_train, baskets_test, coupons_train, coupons_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "print(prods_cat_table.shape)\n",
     "# prods_cat_table.tail(60)"
@@ -96,45 +103,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/jungwoojamesjeong/opt/anaconda3/envs/hu-bads/lib/python3.8/site-packages/pandas/core/frame.py:3065: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self[k1] = value[k2]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   week shopper product  price  target category\n",
-      "0     0       0      71    629       1        3\n",
-      "1     0       0      91    605       1        5\n",
-      "   week shopper  product  price  target category\n",
-      "0    89       0       67    637       1       21\n",
-      "1    89       0       71    629       1        3\n",
-      "   week shopper product  discount category\n",
-      "0     0       0      35        35        7\n",
-      "1     0       0     193        40       19\n",
-      "   week shopper  product  discount category\n",
-      "0    89       0      131        30       23\n",
-      "1    89       0       16        25       17\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Split Data\n",
-    "baskets_train, baskets_test, coupons_train, coupons_test = dbase.generate_split_data_with_category(prods_cat_table)\n",
-    "\n",
-    "print(baskets_train.head(2))\n",
     "print(baskets_test.head(2))\n",
     "print(coupons_train.head(2))\n",
     "print(coupons_test.head(2))"
