--- a/jeong/master_copy_01.ipynb
+++ b/jeong/master_copy_01.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {
     "id": "9dqYCDAyqoBw"
    },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
     }
    ],
    "source": [
-    "file_path = \"../../data/\"\n",
+    "file_path = \"../data/\"\n",
     "\n",
     "baskets_pq = \"baskets.parquet\"\n",
     "coupons_pq = \"coupons.parquet\"\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 66,
    "metadata": {
     "id": "I5XNjgwvqoB0",
     "outputId": "6f63c452-2e3c-4b34-8f92-101e02190aaf"
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 67,
    "metadata": {
     "id": "w-Su_bAoqoB1"
    },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "metadata": {
     "id": "pxFbrDZJqoB1"
    },
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 69,
    "metadata": {
     "id": "fUfDvCG7qoB2",
     "outputId": "6cd7525f-4323-4f28-c9cc-44e2418fb9cd"
@@ -278,7 +278,7 @@
        "2     0        2         773        0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2210,7 +2210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
