--- a/project/train_cv.ipynb
+++ b/project/train_cv.ipynb
@@ -81,7 +81,6 @@
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "import optuna\n",
     "import optuna.integration.lightgbm as lightgb\n",
     "import pickle\n",
     "import sklearn\n",
@@ -298,7 +297,7 @@
    "source": [
     "# Load Data From Pickle\n",
     "\n",
-    "with open(os.getcwd() + \"/cv_dict_01.pickle\", 'rb') as f:\n",
+    "with open(os.getcwd() + \"/../data/pickle/cv_dict_01.pickle\", 'rb') as f:\n",
     "  cv_dict =  pickle.load(f)"
    ],
    "metadata": {
